--- a/Workbooks/Figure5B.Rmd
+++ b/Workbooks/Figure5B.Rmd
@@ -7,10 +7,9 @@ Set up the workspace
 
 ```{r}
 
-require(Seurat)
 require(tidyverse)
 require(CelltypeR)
-
+require(Seurat)
 
 ```
 
@@ -22,8 +21,8 @@ Read in fsc files
 ```{r}
 # input path is the pathway to the folder with the data
 
-input_path <- "/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/GatingPlanExperiment/May10June10_livegating/"
-flowset <- fsc_to_fs(input_path, downsample = 20000)
+input_path <- "/Users/rhalenathomas/GITHUB/CelltypeR/Data/MayJune2022/"
+flowset <- fsc_to_fs(input_path, downsample = "none")
 
 
 library(flowWorkspace)  # this library has the function "sampleNames"
@@ -53,20 +52,20 @@ Check the data object
 ### check the density plots above to see which have peaks
 
 plotdensity_flowset(flowset)
-
+flowset_biexp <- harmonize(flowset, processing = 'biexp')
 
 plotdensity_flowset(flowset_biexp)
 
+
 ```
 Note the ssc-h values are very different between May and June.  These value are not used in the clustering.
-
 
 
 ```{r}
 
 #### need to change this function to detect peaks or at least have the user add the column number
 ### check the density plots above to see which have peaks check in plots above
-
+### this dataset has only one peak in the data
 
 flowset_align <- harmonize(flowset, processing = 'align', 
                            two_peaks = c(1),
@@ -86,13 +85,13 @@ Create the data frame and save for later
 df <- flowset_to_csv(flowset_retro)
 
 head(df)
+summary(df)
 
-write.csv(df, "/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/FlowsetAug29.csv")
+write.csv(df, "/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/FlowsetAug30.csv")
 
 
 
 ```
-
 
 
 
@@ -105,14 +104,30 @@ AB <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD71","CD44","GLAST","AQP4"
 seu <- make_seu(df, AB_vector = AB)
 
 DimPlot(seu, raster = FALSE, group.by = "Sample", reduction = "pca")
+VlnPlot(seu, group.by = "Sample", features = c("CD24","CD56"))
+seu <- RunUMAP(seu, n.neighbors = 60, reduction = "pca", features = AB)
+
 DimPlot(seu, raster = FALSE, group.by = "Sample", reduction = "umap")
+
+
 
 
 
 
 ```
 
+```{r}
+table(seu$Sample)
 
+```
+
+
+```{r}
+saveRDS(seu, "/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/AIWallcells.RDS")
+
+seu <- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/AIWallcells.RDS")
+
+```
 
 
 
@@ -128,26 +143,31 @@ seu <- get_clusters(seu, method = "louvain",
                          plots = FALSE,
                          save_plots = FALSE)
 
-DimPlot(seu, raster = FALSE, group.by = "seurat_clusters", label = TRUE)
+DimPlot(seu, raster = FALSE, label = TRUE)
 
 
+```
+```{r}
+table(seu$Sample)
 ```
 
 
 
 ```{r}
-for (i in AB) {
-  print(FeaturePlot(seu, features = i, min.cutoff = 'q1', max.cutoff = 'q97', label = TRUE, raster = FALSE))
-}
+seu <- FindClusters(seu, resolution = c(1,1.2))
+
+DimPlot(seu, label = TRUE, raster = FALSE)
+
 
 ```
-
-
 
 
 ```{r}
-seu <- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/FlowDataFiles/PresortingMay10June10/NewDataannaote.14122022.Rds")
+library(clustree)
+clustree(seu, prefix = "RNA_snn_res.")
+
 ```
+
 
 
 
@@ -162,7 +182,7 @@ Visualize expression
 
 ```{r}
 AB <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD71","CD44","GLAST","AQP4","HepaCAM", "CD140a","O4")
-Idents(seu) <- "seurat_clusters"
+Idents(seu) <- "RNA_snn_res.1.2"
 for (i in AB) {
   print(FeaturePlot(seu, features = i, min.cutoff = 'q1', max.cutoff = 'q97', label = TRUE, raster = FALSE, slot = "scale.data"))
 }
@@ -171,14 +191,15 @@ for (i in AB) {
 ```
 
 
+
 Heat map by cluster
 
 ```{r}
 library(data.table)
-
+length(unique(seu$seurat_clusters))
 plotmean(plot_type = 'heatmap',seu = seu, group = 'seurat_clusters',
          markers = AB, 
-               var_names = c(0:29), slot = 'scale.data', xlab = "Cluster",
+               var_names = c(0:28), slot = 'scale.data', xlab = "Cluster",
                ylab = "Markers")
 ```
 
@@ -212,16 +233,17 @@ Visualize correlation results and get annotation per cluster as well as top 5 mo
 
 ```{r}
 
-#seu <- AddMetaData(object=seu, metadata=cor$cell.label, col.name = 'cor.labels')
+cor <- read.csv("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/Cor3501Aug30.csv")
 
-cor.ann <- get_annotation(seu, seu.cluster = seu$seurat_clusters, 
+seu <- AddMetaData(object=seu, metadata=cor$cell.label, col.name = 'cor.labels')
+cor.ann <- get_annotation(seu, seu.cluster = seu$RNA_snn_res.1.2, 
                           seu.label = seu$cor.labels, top_n = 3, 
                           filter_out = c("Unknown","unknown","Mixed", 
                                          "unassigned","Unassigned"), 
                           Label = "CAM")
 
 # top 5 per groups
-t.lables <- as.data.frame(table(seu$seurat_clusters, seu$cor.labels))
+t.lables <- as.data.frame(table(seu$RNA_snn_res.1.2, seu$cor.labels))
   t.lables$Freq <- as.double(t.lables$Freq)
   colnames(t.lables) <- c("Cluster", "Label","Freq")
   top.labs <- t.lables  %>% group_by(Cluster) %>% top_n(5, Freq)
@@ -229,7 +251,7 @@ t.lables <- as.data.frame(table(seu$seurat_clusters, seu$cor.labels))
   print(sort.tops)
   
 #write.csv(sort.tops,"Cor035top5pred.csv")
-cor.pred.top5 <- read.csv("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/Cor035top5pred.csv")
+#cor.pred.top5 <- read.csv("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/Cor035top5pred.csv")
   
 ```
 
@@ -270,7 +292,7 @@ rf <- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysi
 AB <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD71","CD44","GLAST","AQP4","HepaCAM", "CD140a","O4")
 
 
-rfm.pred <- RFM_predict(seu, rf, markers = AB)
+rfm.pred <- RFM_predict(seu, rf)
 head(rfm.pred)
 unique(rfm.pred$Prediction)
 seu <- AddMetaData(object=seu, metadata= as.factor(rfm.pred$Prediction), col.name = 'rfm.pred2')
@@ -284,40 +306,30 @@ Top 5 predictions with RFM and the top prediction per cluster
 
 ```{r}
 
-rfm.ann <- get_annotation(seu, seu.cluster = seu$seurat_clusters, 
+rfm.ann <- get_annotation(seu, seu.cluster = seu$RNA_snn_res.1.2, 
                           seu.label = seu$rfm.pred2, top_n = 3, 
                           filter_out = c("Unknown","unknown","Mixed", 
                                          "unassigned","Unassigned"), 
                           Label = "RFM")
 
 # top 5 per groups
-t.lables <- as.data.frame(table(seu$seurat_clusters, seu$rfm.pred2))
+t.lables <- as.data.frame(table(seu$RNA_snn_res.1.2, seu$rfm.pred2))
   t.lables$Freq <- as.double(t.lables$Freq)
   colnames(t.lables) <- c("Cluster", "Label","Freq")
   top.labs <- t.lables  %>% group_by(Cluster) %>% top_n(5, Freq)
   sort.tops <- top.labs %>% as.data.frame() %>% arrange(desc(Freq))  %>% arrange(Cluster)
   print(sort.tops)
   
-#write.csv(sort.tops,"RFMtop5pred.csv")
+write.csv(sort.tops,"/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/RFMtop5predAug30.csv")
   
-rfm.pred.top5 <- read.csv("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/RFMtop5pred.csv")
+#rfm.pred.top5 <- read.csv("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/RFMtop5predAug30.csv")
 
 ```
 
-```{r}
-#saveRDS(seu,"/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/SeuNewAIW_labelled.RDS")
-
-#seu <- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/SeuNewAIW_labelled.RDS")
-
-Idents(seu) <- "seurat_clusters"
-
-seu.new.sub <- subset(seu, downsample = 500)
-table(seu.new.sub$seurat_clusters)
-seu.new.sub <- ScaleData(seu.new.sub, features = AB)
-DimPlot(seu.new.sub)
-
-
+```{r, fig.width=4}
+DimPlot(seu, group.by = "rfm.pred2", raster = FALSE, label = TRUE)
 ```
+
 
 
 
@@ -329,18 +341,25 @@ Predict cell types with Seurat label transfer
 
 seu.r<- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure4/All9MOannaoteAug.RDS") 
 
-Idents(seu.r) <- 'Celltypes'
-seu.r <- subset(seu.r, downsample = 5000)
+# take the AIW hMOs
 
-table(seu.r$Celltypes)
+Idents(seu.r) <- "Sample"
+levels(seu.r)
+seu.r <- subset(seu.r, idents = c("AIW002_0306", "AIW002_0317A", "AIW002_0317B"))
+seu.aiw <- seu.r
 
-DimPlot(seu.r)
+DimPlot(seu.aiw, group.by = "Celltypes")
+table(seu.aiw$Celltypes)
+
+
+
 #DimPlot(seu, reduction = "pca", group.by = "Sample", raster = FALSE)
 AB <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD71","CD44","GLAST","AQP4","HepaCAM", "CD140a","O4")
+Idents(seu.r) <- "Celltypes"
+seu.r <- subset(seu.r, downsample = 1000)
+
 seu.r <- ScaleData(seu.r, features = AB)
 seu.r <- RunPCA(seu.r, features = AB, verbose = FALSE, approx = FALSE)
-
-
 
 ```
 
@@ -354,35 +373,36 @@ Predict with reference data
 
 
 AB <- c("CD24","CD56","CD29","CD15","CD184","CD133","CD71","CD44","GLAST","AQP4","HepaCAM", "CD140a","O4")
-seu <- seurat_predict(seu.new.sub, seu.r, ref_id = 'Celltypes', 
+seu <- seurat_predict(seu, seu.r, ref_id = 'Celltypes', 
                         refdata = seu.r$Celltypes,
                            down.sample = "none", 
-                        markers = AB)
+                        markers = AB, kfilter = 50)
 
 
-DoHeatmap(seu.new.sub, features = AB)
+seu.ann <- get_annotation(seu, seu.cluster = seu$RNA_snn_res.1.2, 
+                          seu.label = seu$seu.pred, top_n = 1, 
+                          filter_out = c("Unknown","unknown","Mixed", 
+                                         "unassigned","Unassigned"), 
+                          Label = "seu")
 
-  # find anchors
-Idents(seu.r) <- "Celltypes"
-anchors <- FindTransferAnchors(reference = seu.r,
-                                 query = seu.new.sub, 
-                               features = AB,npcs = 12,
-                                 dim= 1:12, n.trees = 25, verbose = FALSE, reduction = "cca"
-                               )
-  
-ancn <- dim(as.data.frame(anchors@anchors))[1]
+# top 5 per groups
+t.lables <- as.data.frame(table(seu$RNA_snn_res.1.2, seu$seu.pred))
+  t.lables$Freq <- as.double(t.lables$Freq)
+  colnames(t.lables) <- c("Cluster", "Label","Freq")
+  top.labs <- t.lables  %>% group_by(Cluster) %>% top_n(5, Freq)
+  sort.tops <- top.labs %>% as.data.frame() %>% arrange(desc(Freq))  %>% arrange(Cluster)
+  print(sort.tops)
 
-an <- dim(ancn)[1]
-
-predictions <- TransferData(anchorset = anchors, refdata = seu.r$Celltypes,
-                               k.weight = 8)
-seu <- AddMetaData(seu, metadata = predictions$predicted.id,
-                       col.name = 'seu.pred')
 
 
 
 
 ```
+
+```{r}
+DimPlot(seu, label = TRUE, raster = FALSE, group.by = "seu.pred")
+```
+
 
 
 Make a table with the top predictions per cell type from 3 prediction methods
@@ -391,8 +411,19 @@ Make a table with the top predictions per cell type from 3 prediction methods
 an.list <- list(cor.ann, rfm.ann, seu.ann)
 df.an <- annotate_df(an.list)
 df.an
-write.csv(df.an, "annotationPredsTop1.csv")
+setwd("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/")
+write.csv(df.an, "annotationPredsTop1Aug30.csv")
 
+```
+
+
+```{r}
+DimPlot(seu, group.by = "RNA_snn_res.0.8", label = TRUE, raster = FALSE)
+```
+
+
+```{r}
+unique(seu.r$Celltypes)
 ```
 
 
@@ -401,7 +432,47 @@ write.csv(df.an, "annotationPredsTop1.csv")
 
 Annotated clusters of two new AIW002-02 hMO batches
 
-```{r}
+```{r, fig.width= 10}
+
+# all cluster named separately
+cluster.ids <- c("Glial-lineage","Astro2a","Astro1a","Neural-lineage","RG1.1",   # 0-4
+                 "Epithelial","Neurons1a","Neurons1b","RG1","Neurons1c",  #5-9
+                 "OPC","RG2","Astro1a", "Neurons2d","Endothelial", #10-14
+                 "RG1.2", "RG1a", "Glial-lineage","NPCa","OPC-like",  #15-19
+                 "Neurons2a", "stemlike","Neurons2b", "Astro2b", "NPCb", #20-24
+                 "Neurons2c","RG3","Astro2c","oligo"
+                 )
+
+
+seu <- annotate(seu, annotations = cluster.ids, to_label = "RNA_snn_res.1.2", 
+                annotation_name = "Celltypes1")
+
+DimPlot(seu, label = TRUE, raster = FALSE, label.size = 6)
+
+# decided RG group by heatmap 
+
+
+# group same together 
+cluster.ids <- c("Glia-lineage","Astrocytes 2","Astrocytes 1","Neural-lineage","Radial Glia 1",   # 0-4
+                 "Epithelial","Neurons 1","Neurons 1","Radial Glia 1","Neurons 1",  #5-9
+                 "OPC","Radial Glia 2","Astrocytes 1", "Neurons 2","Endothelial", #10-14
+                 "Radial Glia 1", "Radial Glia 1a", "Glia-lineage","NPC","OPC-like",  #15-19
+                 "Neurons 2", "Stem cell like","Neurons 2", "Astrocytes 2", "NPC", #20-24
+                 "Neurons 2","Radial Glia 3","Astrocytes 2","Oligodendrocytes"
+                 )
+
+seu <- annotate(seu, annotations = cluster.ids, to_label = "RNA_snn_res.1.2", 
+                annotation_name = "Celltypes")
+
+DimPlot(seu, label = TRUE, raster = FALSE, label.size = 6)
+
+cell.order <- c("Astrocytes 1", "Astrocytes 2",
+                     "Radial Glia 1","Radial Glia 1a","Radial Glia 2",
+                     "Radial Glia 3","Glia-lineage",
+                     "Epithelial","Endothelial",
+                     "Neurons 1","Neurons 2","NPC","Neural-lineage",
+                     "Oligodendrocytes","OPC","OPC-like",
+                     "Stem cell like")
 
 clust.colours <- c("chocolate2",# Astrocytes 1
                    "darkorange", # Astrocytes 2
@@ -420,70 +491,35 @@ clust.colours <- c("chocolate2",# Astrocytes 1
                    "olivedrab4", # OPC
                    "darkseagreen3",#OPC like
                    "tomato3",# stem like
-                   "burlywood3" #extra 
+                   "burlywood3", #extra
                    )
 
-
+DimPlot(seu, cols = clust.colours, shuffle = TRUE, 
+        raster=FALSE, pt.size = 0.1, label = TRUE, 
+        group.by = 'Celltypes',
+        order = rev(cell.order))
 
 
 
 ```
 
-
-
-
-
-
-Heatmaps
-
-```{r}
-DoHeatmap(seu, group.by = 'Cell_types', features = AB, size= 5,slot = "scale.data",
-        angle = 90,label = TRUE,
-        hjust = 0, group.bar.height = 0.05, disp.max = 2, disp.min = -1.5) + scale_fill_gradientn(colors = c("#154c79", "#eeeee4", "#e28743")) + 
-  theme(axis.text.y = element_text(size = 13)) 
-
-```
-
-
-Cell Types for figures
-
+save the plot
 ```{r}
 
-Idents(seu) <- "RNA_snn_res.1.2"
 
-cluster.ids <- c("Mixed","Astrocytes 1","Radial Glia 1","Astrocytes 2","Radial Glia 1",   # 0-4
-                 "Neurons 2","Radial Glia 2","Neurons 1","Radial Glia 2","Astrocytes 1",  #5-9
-                 "Neurons 2","Epithelial", "Neurons 2","Radial Glia 1", "Astrocytes 1", #10-14
-                 "Neurons 1", "OPC", "Astrocytes 2","Stem cell like","Astrocytes 1",  #15-19
-                 "Neurons 1", "Endothelial","Astrocytes 1", "Neurons 2","Neurons 2", #20-24
-                 "Neurons 1","Neurons 2","Radial Glia 1","NPC","NPC", #25-29
-                 "Astrocytes 1","Astrocytes 2","Epithelial","Oligodendrocytes", "Astrocytes 2",
-                 "Glia")
-
-names(cluster.ids) <- levels(seu)
-seu <- RenameIdents(seu, cluster.ids)
-seu$Cell_types <- Idents(seu)
+table(seu$Celltypes)
 
 
-# change the order of the cell types on the legend of the umap
-cell.type.order <- c("Astrocytes 1", "Astrocytes 2","Radial Glia 1","Radial Glia 2",
-                     "Epithelial","Endothelial","NPC","Neurons 1","Neurons 2",
-                     "Oligodendrocytes","OPC","Stem cell like","Glia","Mixed")
-cell.type.order <- rev(cell.type.order)
-
-# colour order to match cell type order
-clust.colours <- c("chocolate1","orange","lightsalmon", "pink",
-                   "steelblue3","deepskyblue","plum3","purple","orchid2",
-                   "seagreen3","green","tomato3","burlywood3","grey90","lemonchiffon3","yellow")
-
-Idents <- 'Cell_types'
-DimPlot(seu, order = cell.type.order, cols = clust.colours, shuffle = TRUE, raster=FALSE,pt.size = 0.1, label = FALSE, label.size = 6) +
-  theme(legend.text = element_text(size=16), axis.title.y = element_text(size=16), 
-        axis.title.x = element_text(size=16), axis.text.y = element_text(size =16),
-        axis.text.x = element_text(size =16))
-
-
-
+setwd("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/")
+pdf("UMAP.all.cells2.pdf",width = 9, height = 4.5)
+DimPlot(seu, cols = clust.colours, shuffle = TRUE, 
+        raster=FALSE, pt.size = 0.001, label = FALSE, 
+        group.by = 'Celltypes',
+        order = rev(cell.order)) +
+theme(legend.text = element_text(size=15), axis.title.y = element_text(size=15), 
+         axis.title.x = element_text(size=15), axis.text.y = element_text(size =15),
+        axis.text.x = element_text(size =15))
+dev.off()
 
 
 ```
@@ -491,15 +527,236 @@ DimPlot(seu, order = cell.type.order, cols = clust.colours, shuffle = TRUE, rast
 
 
 
-# Create a seurat object with AIW002 batches from Figures 4 and the new batches
+
+
+```{r}
+Idents(seu) <- "Celltypes"
+
+cells <- levels(seu)
+
+plotmean(plot_type = 'heatmap',seu = seu, group = 'Celltypes',
+         markers = AB, slot = 'scale.data', xlab = "Celltypes",var_names = cells,
+               ylab = "Markers")
+
+```
+
+
+Add batch annotations
+
+```{r}
+Idents(seu) <- "Sample"
+levels(seu)
+
+batch <- c("C","C","D","D","C","C","C")
+seu <- annotate(seu, annotations = batch, 
+                  to_label= "Sample", 
+                  annotation_name = "Batch")
+
+table(seu$Sample, seu$Batch)
+
+
+```
+
+
+
+
+
+
+Combine the two data objects and make the barcharts
 
 ```{r}
 
+seu.aiw$orig.ident <- "AandB"
+
+seu$orig.ident <- "CandD"
+
+seu.all <- merge(seu.aiw, y = seu, project = "AIW002all.batches")
+
+
+
+
+```
+
+
+```{r}
+saveRDS(seu.all, "/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/CombinedABCD.RDS")
+
+seu.all <- readRDS("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/CombinedABCD.RDS")
+
 ```
 
 
 
 
+```{r}
+VlnPlot(seu.all, features = "CD24", group.by = "Batch")
+```
 
+
+```{r}
+table(seu.all$Batch, seu.all$Celltypes)
+```
+
+Make a barchart of the proportion of cell types
+
+```{r}
+
+# cell order and clust.colours defined above)
+seu.all$Celltypes <- factor(seu.all$Celltypes, levels = c("Astrocytes 1", "Astrocytes 2",
+                     "Radial Glia 1","Radial Glia 1a","Radial Glia 2",
+                     "Radial Glia 3","Glia-lineage",
+                     "Epithelial","Endothelial",
+                     "Neurons 1","Neurons 2","NPC","Neural-lineage",
+                     "Oligodendrocytes","OPC","OPC-like",
+                     "Stem cell like"))
+
+
+proportionplots(seu.all, seu.var = seu.all$Batch, seu.lable = seu.all$Celltypes, groups = "AIW002 Batch", my_colours = clust.colours)
+
+```
+
+save the plot
+```{r}
+setwd("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/")
+pdf("PercentCelltypesBatch.pdf", width = 5, height = 4)
+proportionplots(seu.all, seu.var = seu.all$Batch, seu.lable = seu.all$Celltypes, groups = "AIW002 Batch", my_colours = clust.colours)
+dev.off()
+
+
+```
+
+Proportionality tests
+
+```{r}
+
+library(scProportionTest)
+# create a propotion test object
+
+
+
+Idents(seu.all) <- "Celltypes"
+prop_test <- sc_utils(seu.all)
+
+# set up the comparison
+
+# need to compare separately
+prop_test <- permutation_test(
+	prop_test, cluster_identity = "Celltypes",
+	sample_1 = "A", sample_2 = "B",
+	sample_identity = "Batch"
+)
+
+# make the plot
+permutation_plot(prop_test)
+setwd("/Users/rhalenathomas/Documents/Data/FlowCytometry/PhenoID/Analysis/NatMethodJuneSubmission/Figure5/")
+# save the plot 
+png("prp.test.batchAvsB.png", width = 600, height = 300)
+permutation_plot(prop_test) +  theme(axis.text.x = element_text(size = 12),
+        axis.text.y = element_text(size = 12),
+        axis.title = element_text(size = 14),    # Adjust axis title size
+  legend.text = element_text(size = 12),   # Adjust legend text size
+  legend.title = element_text(size = 14))
+dev.off()
+
+
+# need to compare separately
+prop_test <- permutation_test(
+	prop_test, cluster_identity = "Celltypes",
+	sample_1 = "A", sample_2 = "C",
+	sample_identity = "Batch"
+)
+
+# make the plot
+permutation_plot(prop_test)
+
+# save the plot 
+png("prp.test.batchAvsC.png", width = 600, height = 300)
+permutation_plot(prop_test) +  theme(axis.text.x = element_text(size = 12),
+        axis.text.y = element_text(size = 12),
+        axis.title = element_text(size = 14),    # Adjust axis title size
+  legend.text = element_text(size = 12),   # Adjust legend text size
+  legend.title = element_text(size = 14))
+dev.off()
+
+# need to compare separately
+prop_test <- permutation_test(
+	prop_test, cluster_identity = "Celltypes",
+	sample_1 = "A", sample_2 = "D",
+	sample_identity = "Batch"
+)
+
+# make the plot
+permutation_plot(prop_test)
+
+# save the plot 
+png("prp.test.batchAvsD.png", width = 600, height = 300)
+permutation_plot(prop_test) +  theme(axis.text.x = element_text(size = 12),
+        axis.text.y = element_text(size = 12),
+        axis.title = element_text(size = 14),    # Adjust axis title size
+  legend.text = element_text(size = 12),   # Adjust legend text size
+  legend.title = element_text(size = 14))
+dev.off()
+
+# need to compare separately
+prop_test <- permutation_test(
+	prop_test, cluster_identity = "Celltypes",
+	sample_1 = "B", sample_2 = "C",
+	sample_identity = "Batch"
+)
+
+# make the plot
+permutation_plot(prop_test)
+
+# save the plot 
+png("prp.test.batchBvsC.png", width = 600, height = 300)
+permutation_plot(prop_test) +  theme(axis.text.x = element_text(size = 12),
+        axis.text.y = element_text(size = 12),
+        axis.title = element_text(size = 14),    # Adjust axis title size
+  legend.text = element_text(size = 12),   # Adjust legend text size
+  legend.title = element_text(size = 14))
+dev.off()
+
+# need to compare separately
+prop_test <- permutation_test(
+	prop_test, cluster_identity = "Celltypes",
+	sample_1 = "B", sample_2 = "D",
+	sample_identity = "Batch"
+)
+
+# make the plot
+permutation_plot(prop_test)
+
+# save the plot 
+png("prp.test.batchBvsD.png", width = 600, height = 300)
+permutation_plot(prop_test) +  theme(axis.text.x = element_text(size = 12),
+        axis.text.y = element_text(size = 12),
+        axis.title = element_text(size = 14),    # Adjust axis title size
+  legend.text = element_text(size = 12),   # Adjust legend text size
+  legend.title = element_text(size = 14))
+dev.off()
+
+
+# need to compare separately
+prop_test <- permutation_test(
+	prop_test, cluster_identity = "Celltypes",
+	sample_1 = "C", sample_2 = "D",
+	sample_identity = "Batch"
+)
+
+# make the plot
+permutation_plot(prop_test)
+
+# save the plot 
+png("prp.test.batchCvsD.png", width = 600, height = 300)
+permutation_plot(prop_test) +  theme(axis.text.x = element_text(size = 12),
+        axis.text.y = element_text(size = 12),
+        axis.title = element_text(size = 14),    # Adjust axis title size
+  legend.text = element_text(size = 12),   # Adjust legend text size
+  legend.title = element_text(size = 14))
+dev.off()
+
+
+
+```
 
 
